// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should applies correct size classes 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--circle avatar--lg avatar--primary"
  >
    EC
  </div>
</DocumentFragment>
`;

exports[`Avatar should applies correct skin classes 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</DocumentFragment>
`;

exports[`Avatar should applies square appearance classes 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--square avatar--md avatar--primary"
  >
    EC
  </div>
</DocumentFragment>
`;

exports[`Avatar should render additional classes 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--circle avatar--md avatar--primary other-class"
  >
    EC
  </div>
</DocumentFragment>
`;

exports[`Avatar should render image 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    <span
      class="avatar__loading"
    >
      <div
        class="spinner spinner--white spinner--md"
      >
        <svg
          class="spinner__svg"
          fill="currentColor"
          height="20"
          viewBox="0 0 48 48"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="24"
            cy="4"
            r="4"
          />
          <circle
            cx="12.19"
            cy="7.86"
            r="3.7"
          />
          <circle
            cx="5.02"
            cy="17.68"
            r="3.4"
          />
          <circle
            cx="5.02"
            cy="30.32"
            r="3.1"
          />
          <circle
            cx="12.19"
            cy="40.14"
            r="2.8"
          />
          <circle
            cx="24"
            cy="44"
            r="2.5"
          />
          <circle
            cx="35.81"
            cy="40.14"
            r="2.2"
          />
          <circle
            cx="42.98"
            cy="30.32"
            r="1.9"
          />
          <circle
            cx="42.98"
            cy="17.68"
            r="1.6"
          />
          <circle
            cx="35.81"
            cy="7.86"
            r="1.3"
          />
        </svg>
      </div>
    </span>
    <img
      alt="Emma Clark"
      class="avatar__img"
      src="path/to/image.jpg"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar should renders component as anchor 1`] = `
<DocumentFragment>
  <a
    class="avatar avatar--circle avatar--md avatar--primary"
    href="#"
  >
    EC
  </a>
</DocumentFragment>
`;

exports[`Avatar should renders default component 1`] = `
<DocumentFragment>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</DocumentFragment>
`;
